hphp/hack/test/typecheck/async_last.php.exp
File "async_last.php", line 9, characters 3-20:
The 'async' modifier must be directly before the 'function' keyword. (Parsing[1002])
